--- a/static/paradox-frame/index.html
+++ b/static/paradox-frame/index.html
@@ -43,7 +43,7 @@
           </tr>
           <tr>
             <td align="center">
-              更新时间：2017-12，技术支持：James Zhang，企业网站 <a style="color:red" href="http://www.senboll.com">http://www.senboll.com</a>
+              更新时间：2017-12，网站支持：James Zhang，企业网站 <a style="color:red" href="http://www.senboll.com">http://www.senboll.com</a>
             </td>
           </tr>
         </table>
