--- a/static/contact.html
+++ b/static/contact.html
@@ -1,18 +1,31 @@
 <html>
 
 <head>
-    <meta name="viewport" content="width=device-width, minimum-scale=0.1">
-    <title>网站支持联系方式</title>
+    <title>网站支持联系方式</title>     
+	<meta charset="UTF-8" />
 
-    <link href="/help/css/theme-mine.css" rel="stylesheet">
+    <style type="text/css"> 
+        .qrcode {
+            position: relative;
+            text-align: center;
+            color: #fff;
+            margin: 0 auto; /*水平居中*/
+            top: 50%; /*偏移*/
+            transform: translateY(-50%);
+        }
+        .img {
+            width: 430px;
+            height: 430px; 
+        }
+    </style> 
 
 </head>
 
-<body style="margin: 0px; background: #0e0e0e;">
+<body style="margin: 0px; background: #000000;">
     <div class="qrcode">
-        <img class="img" style="-webkit-user-select: none;" src="images/wechat-james.png">
-        <p >需要更多的支持</p>
-        <p >请使用手机微信扫码添加James微信</p>
+        <img class="img" src="images/wechat-james.png">
+        <p>需要更多的支持</p>
+        <p>请使用手机微信扫码添加James微信</p>        
     </div>
 </body>
 
