--- a/static/paradox-frame/index.html
+++ b/static/paradox-frame/index.html
@@ -217,14 +217,14 @@
                 <p align="center">
                   <a href="http://www.paradox.com">英文官网</a> | 
                   <a href="http://www.senboll.com">中文官网</a> | 
-                  <a href="http://support.senboll.com:8888/help">帮助中心</a> | 
+                  <a href="http://support.senboll.com:8888/docs">帮助中心</a> | 
                   <a href="http://support.senboll.com:8888">资料服务器</a> | 
                   <a href="http://support.senboll.com:8888/usage">案例相册</a> | 
                   <a href="http://support.senboll.com:8888/swan">APP缴费</a>
                   <br/>
                   <br/>
                   全国服务热线：400-002-5577 
-                  <!-- <a href="http://support.senboll.com:8888/help/contact.html">网站支持：James Zhang</a> -->
+                  <!-- <a href="http://support.senboll.com:8888/docs/contact.html">网站支持：James Zhang</a> -->
                   <br/>
                   <br/>
                   ©<span id="year"></span>年著作权，盛波尔科技所有权。
