--- a/static/paradox-frame/index.html
+++ b/static/paradox-frame/index.html
@@ -218,7 +218,7 @@
                   <a href="http://www.paradox.com">英文官网</a> | 
                   <a href="http://www.senboll.com">中文官网</a> | 
                   <a href="http://support.senboll.com:8888/docs">帮助中心</a> | 
-                  <a href="http://support.senboll.com:8888">资料服务器</a> | 
+                  <a href="http://support.senboll.com:8888/files">资料服务器</a> | 
                   <a href="http://support.senboll.com:8888/usage">案例相册</a> | 
                   <a href="http://support.senboll.com:8888/swan">APP缴费</a>
                   <br/>
